minor fixes on mobile and safari

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -66,7 +66,8 @@ body {
         justify-content: space-between;
         margin: 0 auto;
         background-color: transparent; /* Semi-transparent background */
-        backdrop-filter: blur(5px); /* Apply a 5px blur effect to the backdrop */  
+        backdrop-filter: blur(5px); /* Apply a 5px blur effect to the backdrop */ 
+        -webkit-backdrop-filter: blur(5px); /*Safari blur*/
     }
 }
 
@@ -144,7 +145,7 @@ body {
 }
 
 .navbar {
-    min-width: 280px;
+    min-width: 300px;
     position: sticky;
         top: 30px;
 }
@@ -207,9 +208,14 @@ a:hover {
 
 .home {
     color: #18ffb0;
+    
 }
 
-
+nav {
+    a {
+        text-shadow:0 0 5px #051819;
+    }
+}
 
 .nav-divider {
     width: 1px;
@@ -274,10 +280,11 @@ a:hover {
    background: linear-gradient(to right, $green , $blue); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-size: 1.7rem;
 }
 
 .description {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 500;
 }
 
@@ -576,7 +583,7 @@ form {
 @media (max-width: 600px) {
     .sticky-top-nav {
         position: sticky;
-        top: 75px;
+        top: 60px;
     }
 }
 
@@ -667,7 +674,16 @@ form {
   }
 }
 
-
+@media (max-width: 600px) {
+    .large-screen-only {
+        display: none;
+    }
+    .small-screen-only {
+        display: inline-block;
+        font-size: 1.2rem;
+        margin-left: 10px;
+    }
+}
 @media (max-width: 550px) {
     
     .row {
@@ -692,14 +708,8 @@ form {
     .contattami {
         max-width: 85%;
     }
-    .large-screen-only {
-        display: none;
-    }
-    .small-screen-only {
-        display: inline-block;
-        font-size: 1.2rem;
-        margin-left: 10px;
-    }
+    
+    
     .lang {
         display: flex;
         justify-content: flex-end;
